# listany

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: postCreateCommand.sh  postStartCommand.sh
api/: .flake8  .isort.cfg  manage.py  package-lock.json  pyproject.toml  tailwind.config.js
api/api/: permissions.py  schema.py  settings.py  urls.py
api/authentication/: admin.py  backends.py  decorators.py  models.py  pipeline.py  schema.py
api/authentication/migrations/: 0001_initial.py
api/authentication/models/: user.py
api/common/: admin.py
api/common/static/common/css/: styles.css
api/common/templates/unfold_admin/: login.html
api/core/: admin.py  models.py  schema.py
api/core/migrations/: 0001_initial.py  0002_tag_unique_slug.py  0003_alter_tag_slug.py  0004_collectionlink_unique_collection_link.py  0005_alter_usertag_color.py  0006_link_created_by.py  0007_alter_link_created_by.py  0008_collection_is_deleted_collection_is_hidden.py  0009_collectionlink_is_deleted.py  0010_link_is_deleted_link_is_hidden_tag_is_deleted_and_more.py
api/core/models/: __init__.py  collection.py  collection_link.py  link.py  tag.py  user_tag.py
api/core/src/collection/: admin.py  model.py  schema.py
api/core/src/collection_link/: admin.py  model.py  schema.py
api/core/src/link/: admin.py  model.py  schema.py
api/core/src/tag/: admin.py  model.py  schema.py
api/core/src/user_tag/: admin.py  model.py  schema.py
app/: package-lock.json  package.json
app/src/: App.vue  main.ts
dashboard/: Pipfile  manage.py
dashboard/bookmarks/: admin.py  apps.py  metadata.py  models.py  schema.py  tests.py
dashboard/dashboard/: __init__.py  asgi.py  schema.py  settings.py  urls.py  wsgi.py
scripts/: lint-and-clean
(+35 files in other folders)
